# ASD_II_Projekt

./: CMakeLists.txt  README.md  main.cpp
Dane/: dane.txt
Funkcje/: !update.txt  !wazne.txt  det.cpp  det.h  do_segments_intersect.cpp  do_segments_intersect.h  is_point_in_polygon.cpp  is_point_in_polygon.h  is_point_on_segment.cpp  is_point_on_segment.h  otoczka_graham.cpp  point.cpp  point.h  punkt.cpp  punkt.h  test.cpp
Funkcje/Testy/: run_test_det.sh  run_test_do_segments_intersect.sh  run_test_is_point_in_polygon.sh  run_test_is_point_on_segment.sh  run_test_point.sh  test_det  test_det.cpp  test_do_segments_intersect  test_do_segments_intersect.cpp  test_is_point_in_polygon  test_is_point_in_polygon.cpp  test_is_point_on_segment  test_is_point_on_segment.cpp  test_point  test_point.cpp
Notatki/Aleks/: bellmanFord.cpp  bfs.cpp  listaSasiedztwaGrafSkierowany.cpp  macierzSasiedztwaGrafSkierowany.cpp
Notatki/Gosia/: MaksymalnyPrzepływ.txt
Parser/: DataLoader.cpp  DataLoader.h  InputData.h
Parser/Testy/: run_test_data_loader.ps1  run_test_data_loader.sh  test_data_loader.cpp
Poczta/: changelog.txt  inputDraft.txt  todo.txt
Struktury/: BorderPatrolSolver.cpp  BorderPatrolSolver.h  Edge.h  Graph.cpp  Graph.h  Kopalnia.cpp  Kopalnia.h  Krasnal.cpp  Krasnal.h  Point.cpp  Point.h  Straznik.cpp  Straznik.h
Struktury/Funkcje/: EPS.h  det.cpp  det.h  distance.cpp  distance.h  do_segments_intersect.cpp  do_segments_intersect.h  graham_scan.cpp  graham_scan.h  is_point_in_polygon.cpp  is_point_in_polygon.h  is_point_on_segment.cpp  is_point_on_segment.h
(+18 files in other folders)
